Adicionado arquivo para executar programa

--- a/Analyser/Analyser/Analyser.csproj
+++ b/Analyser/Analyser/Analyser.csproj
@@ -13,7 +13,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>C:\Users\augus\OneDrive\Área de Trabalho\Executavel\</PublishUrl>
+    <PublishUrl>C:\Users\marid\OneDrive\Área de Trabalho\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
